--- a/package.json
+++ b/package.json
@@ -1,5 +1,34 @@
 {
-  "dependencies": {
-    "typescript": "^5.4.5"
-  }
+    "name": "bitcoin-tx-lib",
+    "version": "0.0.1",
+    "description": "A JavaScript library for building and signing Bitcoin transactions (with typescript)",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [
+        "bitcoin",
+        "bitcoin utxo",
+        "build utxos",
+        "bitcoin transactions"
+    ],
+    "author": "https://github.com/emptioapp",
+    "license": "MIT",
+    "main": "./index.tsx",
+    "types": "./types/index.tsx",
+    "devDependencies": {
+        "@types/jest": "^29.5.12",
+        "@types/node": "^20.14.2",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.4",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.4.5"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/emptioapp/bitcoin-tx-lib.git"
+    },
+    "bugs": {
+        "url": "https://github.com/emptioapp/bitcoin-tx-lib/issues"
+    },
+    "homepage": "https://github.com/emptioapp/bitcoin-tx-lib#readme"
 }
