--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.3",
     "description": "A JavaScript library for building and signing Bitcoin transactions (with typescript)",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
     },
     "keywords": [
         "bitcoin",
