--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bitcoin-tx-lib",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "A JavaScript library for building and signing Bitcoin transactions (with typescript)",
     "scripts": {
         "test": "jest"
@@ -13,8 +13,8 @@
     ],
     "author": "https://github.com/emptioapp",
     "license": "MIT",
-    "main": "./src/index.tsx",
-    "types": "./src/types/index.tsx",
+    "main": "./src/index.ts",
+    "types": "./src/types/index.ts",
     "devDependencies": {
         "@types/jest": "^29.5.12",
         "@types/node": "^20.14.2",
