--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "bitcoin-tx-lib",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "description": "A JavaScript library for building and signing Bitcoin transactions (with typescript)",
     "scripts": {
-        "test": "jest"
+        "test": "jest",
+        "build": "tsc"
     },
     "keywords": [
         "bitcoin",
@@ -13,8 +14,8 @@
     ],
     "author": "https://github.com/emptioapp",
     "license": "MIT",
-    "main": "./src/index.ts",
-    "types": "./src/types/index.ts",
+    "main": "./dist/src/index.js",
+    "types": "./dist/src/types/index.d.ts",
     "devDependencies": {
         "@types/jest": "^29.5.12",
         "@types/node": "^20.14.2",
