--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bitcoin-tx-lib",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "description": "A JavaScript library for building and signing Bitcoin transactions (with typescript)",
     "scripts": {
         "test": "jest",
@@ -14,8 +14,8 @@
     ],
     "author": "https://github.com/emptioapp",
     "license": "MIT",
-    "main": "./dist/src/index.js",
-    "types": "./dist/src/types/index.d.ts",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "devDependencies": {
         "@types/jest": "^29.5.12",
         "@types/node": "^20.14.2",
@@ -23,6 +23,13 @@
         "ts-jest": "^29.1.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.5"
+    },
+    "exports": {
+        ".": {
+            "import": "./lib/index.js",
+            "require": "./lib/index.js",
+            "types": "./lib/index.d.ts"
+        }
     },
     "repository": {
         "type": "git",
