--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "strict": true,
         "module": "commonjs",
         "esModuleInterop": true,
-        "outDir": "./dist",
+        "outDir": "./lib",
         "rootDir": "./"
     },
     "paths": {
