--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "devDependencies": {
         "@types/jest": "^29.5.12",
         "@types/node": "^20.14.2",
+        "bs58": "^5.0.0",
+        "cryptojs": "^2.5.3",
+        "eccrypto": "^1.1.6",
         "jest": "^29.7.0",
+        "secp256k1": "^5.0.0",
         "ts-jest": "^29.1.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.5"
