--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "devDependencies": {
+        "@mempool/mempool.js": "^2.3.0",
+        "@noble/hashes": "^1.4.0",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.14.2",
+        "@types/ws": "^8.5.10",
         "bs58": "^5.0.0",
         "cryptojs": "^2.5.3",
-        "eccrypto": "^1.1.6",
+        "elliptic": "^6.5.5",
         "jest": "^29.7.0",
-        "secp256k1": "^5.0.0",
         "ts-jest": "^29.1.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.5"
