--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bitcoin-tx-lib",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "description": "A Typescript library for building and signing Bitcoin transactions",
     "scripts": {
         "test": "jest",
@@ -8,9 +8,13 @@
     },
     "keywords": [
         "bitcoin",
+        "typescript",
+        "expo",
         "bitcoin utxo",
         "build utxos",
-        "bitcoin transactions"
+        "bitcoin transactions",
+        "react native",
+        "react"
     ],
     "author": "https://github.com/emptioapp",
     "license": "MIT",
@@ -29,9 +33,9 @@
     },
     "exports": {
         ".": {
-            "import": "./lib/index.js",
+            "import": "./index.ts",
             "require": "./lib/index.js",
-            "types": "./lib/index.d.ts"
+            "types": "./index.ts"
         }
     },
     "repository": {
