--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "main": "./index.ts",
     "types": "./index.ts",
     "devDependencies": {
-        "@noble/hashes": "^1.4.0",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.14.2",
         "@types/ws": "^8.5.10",
-        "elliptic": "^6.5.5",
         "jest": "^29.7.0",
         "ts-jest": "^29.1.4",
         "ts-node": "^10.9.2",
@@ -50,6 +48,8 @@
     "homepage": "https://github.com/emptioapp/bitcoin-tx-lib#readme",
     "dependencies": {
         "@noble/curves": "^1.8.1",
-        "bech32": "^2.0.0"
+        "@noble/hashes": "^1.7.1",
+        "bech32": "^2.0.0",
+        "elliptic": "^6.6.1"
     }
 }
