--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bitcoin-tx-lib",
-    "version": "0.2.2",
+    "version": "0.2.3",
     "description": "A Typescript library for building and signing Bitcoin transactions",
     "scripts": {
         "test": "jest",
@@ -20,8 +20,8 @@
     ],
     "author": "https://github.com/emptioapp",
     "license": "MIT",
-    "main": "./index.ts",
-    "types": "./index.ts",
+    "main": "./lib/index.js",
+    "types": "./lib/index.d.ts",
     "devDependencies": {
         "@types/jest": "^29.5.12",
         "@types/node": "^20.14.2",
@@ -33,9 +33,9 @@
     },
     "exports": {
         ".": {
-            "import": "./index.ts",
+            "import": "./lib/index.js",
             "require": "./lib/index.js",
-            "types": "./index.ts"
+            "types": "./lib/index.d.ts"
         }
     },
     "repository": {
