--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bitcoin-tx-lib",
-    "version": "0.4.0",
+    "version": "0.4.1",
     "description": "A Typescript library for building and signing Bitcoin transactions",
     "scripts": {
         "test": "jest",
@@ -48,7 +48,7 @@
         "@noble/hashes": "^1.7.1",
         "@scure/base": "^1.2.6",
         "@scure/bip32": "^1.7.0",
-        "bech32": "^2.0.0",
-        "bip39": "^3.1.0"
+        "@scure/bip39": "^1.6.0",
+        "bech32": "^2.0.0"
     }
 }
